--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#Top"><img class="img-responsive" alt="Logo" src="images/logo.png"></a>
+          <a class="navbar-brand" href="#Top"><img class="img-responsive" alt="Logo" src="http://placehold.it/220x94"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -44,7 +44,7 @@
             <div class="row display-flex vertical-center">
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <figure>
-                        <img class="img-responsive center-block img-circle" src="images/banner-250x416.png" alt="Arslan ALAN">
+                        <img class="img-responsive center-block img-circle" src="http://placehold.it/250x327" alt="Arslan ALAN">
                     </figure>
                 </div>
                 <div class="col-md-8 col-sm-8 col-xs-12">
