Add modal-dialog to first section of Work article

--- a/index.htm
+++ b/index.htm
@@ -69,7 +69,7 @@
             <div class="row display-flex">
                 <div class="col-md-4 col-sm-12 col-xs-12 box-style1">
                     <section>
-                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="placehold"> <br>
+                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="placehold" data-toggle="modal" data-target="#work1"> <br>
                         <h3 class="box-h3"><strong>Web Applications</strong></h3>
                         <p class="box-p">Responsive, mobile-first web applications are ready to use.</p>
                     </section>
@@ -229,5 +229,31 @@
             </footer>
         </div>
     </article>
+
+    <!--*************** Modal ****************-->
+    <div class="modal fade" id="work1" tabindex="-1" role="dialog" aria-labelledby="myWorkModalLabel1" aria-hidden="true" style="display: none;">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myWorkModalLabel1">Web Applications</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <img class="img-responsive" src="http://placehold.it/314x104" alt="Appify">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <p>Responsive, mobile-first web applications are ready to use.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
