Fully responsive image design on modal depends on the screen size

--- a/index.htm
+++ b/index.htm
@@ -240,7 +240,11 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-md-12">
-                            <img class="img-responsive" src="http://placehold.it/314x104" alt="Appify">
+                            <picture>
+                                <source media="(min-width: 700px)" srcset="http://placehold.it/1600x1200 2x, http://placehold.it/1024x768" />
+                                <source media="(min-width: 500px)" srcset="http://placehold.it/640x480" />
+                                <img class="img-responsive" src="http://placehold.it/320x480" alt="Web applications">
+                            </picture>
                         </div>
                     </div>
                     <div class="row">
