Apply modal style

--- a/index.htm
+++ b/index.htm
@@ -69,21 +69,21 @@
             <div class="row display-flex">
                 <div class="col-md-4 col-sm-12 col-xs-12 box-style1">
                     <section>
-                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="placehold" data-toggle="modal" data-target="#work1"> <br>
+                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="placehold" data-toggle="modal" data-target="#work1">
                         <h3 class="box-h3"><strong>Web Applications</strong></h3>
                         <p class="box-p">Responsive, mobile-first web applications are ready to use.</p>
                     </section>
                 </div>
                 <div class="col-md-4 col-sm-12 col-xs-12 box-style1">
                     <section>
-                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="Machine Learning Applications"  data-toggle="modal" data-target="#work2"> <br>
+                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="Machine Learning Applications"  data-toggle="modal" data-target="#work2">
                         <h3 class="box-h3"><strong>Machine Learning Applications</strong></h3>
                         <p class="box-p">Bayesian classifier, support vector machines, hidden markow model etc.</p>
                     </section>
                 </div>
                 <div class="col-md-4 col-sm-12 col-xs-12 box-style1">
                     <section>
-                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="Discrete Optimization Applications"  data-toggle="modal" data-target="#work3"> <br>
+                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="Discrete Optimization Applications"  data-toggle="modal" data-target="#work3">
                         <h3 class="box-h3"><strong>Discrete Optimization Applications</strong></h3>
                         <p class="box-p">Genetic algorithms, heuristic methods, ant colony optimization etc.</p>
                     </section>
@@ -109,21 +109,21 @@
             <div class="row display-flex">
                 <div class="col-md-4 col-sm-12 col-xs-12 box-style1">
                     <section>
-                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="placehold" data-toggle="modal" data-target="#portfolio1"> <br>
+                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="placehold" data-toggle="modal" data-target="#portfolio1">
                         <h3 class="box-h3"><strong>Portfolio</strong></h3>
                         <p class="box-p">Responsive, mobile-first Portfolio web applications.</p>
                     </section>
                 </div>
                 <div class="col-md-4 col-sm-12 col-xs-12 box-style1">
                     <section>
-                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="placehold" data-toggle="modal" data-target="#portfolio2"> <br>
+                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="placehold" data-toggle="modal" data-target="#portfolio2">
                         <h3 class="box-h3"><strong>Vigilante</strong></h3>
                         <p class="box-p">Responsive, mobile-first Vigilante web page.</p>
                     </section>
                 </div>
                 <div class="col-md-4 col-sm-12 col-xs-12 box-style1">
                     <section>
-                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="placehold" data-toggle="modal" data-target="#portfolio3"> <br>
+                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="placehold" data-toggle="modal" data-target="#portfolio3">
                         <h3 class="box-h3"><strong>Journey</strong></h3>
                         <p class="box-p">Responsive, mobile-first Journey web page.</p>
                     </section>
@@ -132,21 +132,21 @@
             <div class="row display-flex">
                 <div class="col-md-4 col-sm-12 col-xs-12 box-style1">
                     <section>
-                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="placehold" data-toggle="modal" data-target="#portfolio4"> <br>
+                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="placehold" data-toggle="modal" data-target="#portfolio4">
                         <h3 class="box-h3"><strong>Photographer</strong></h3>
                         <p class="box-p">Responsive, mobile-first Photographer web page.</p>
                     </section>
                 </div>
                 <div class="col-md-4 col-sm-12 col-xs-12 box-style1">
                     <section>
-                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="placehold" data-toggle="modal" data-target="#portfolio5"> <br>
+                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="placehold" data-toggle="modal" data-target="#portfolio5">
                         <h3 class="box-h3"><strong>Traveller</strong></h3>
                         <p class="box-p">Responsive, mobile-first Traveller web site.</p>
                     </section>
                 </div>
                 <div class="col-md-4 col-sm-12 col-xs-12 box-style1">
                     <section>
-                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="placehold" data-toggle="modal" data-target="#portfolio6"> <br>
+                        <img class="img-responsive center-block" src="http://placehold.it/314x104" alt="placehold" data-toggle="modal" data-target="#portfolio6">
                         <h3 class="box-h3"><strong>Learning</strong></h3>
                         <p class="box-p">Responsive, mobile-first Learning web site.</p>
                     </section>
@@ -235,7 +235,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myWorkModalLabel1">Web Applications</h4>
+                    <h4 class="modal-title modal-h4" id="myWorkModalLabel1">Web Applications</h4>
                 </div>
                 <div class="modal-body">
                     <div class="row">
@@ -249,7 +249,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <p>Responsive, mobile-first web applications are ready to use.</p>
+                            <p class="modal-p">Responsive, mobile-first web applications are ready to use.</p>
                         </div>
                     </div>
                 </div>
@@ -264,7 +264,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myWorkModalLabel2">Machine Learning Applications</h4>
+                    <h4 class="modal-title modal-h4" id="myWorkModalLabel2">Machine Learning Applications</h4>
                 </div>
                 <div class="modal-body">
                     <div class="row">
@@ -278,7 +278,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <p>Bayesian classifier, support vector machines, hidden markow model etc.</p>
+                            <p class="modal-p">Bayesian classifier, support vector machines, hidden markow model etc.</p>
                         </div>
                     </div>
                 </div>
@@ -293,7 +293,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myWorkModalLabel3">Discrete Optimization Applications</h4>
+                    <h4 class="modal-title modal-h4" id="myWorkModalLabel3">Discrete Optimization Applications</h4>
                 </div>
                 <div class="modal-body">
                     <div class="row">
@@ -307,7 +307,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <p>Genetic algorithms, heuristic methods, ant colony optimization etc.</p>
+                            <p class="modal-p">Genetic algorithms, heuristic methods, ant colony optimization etc.</p>
                         </div>
                     </div>
                 </div>
@@ -322,7 +322,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myPortfolioModalLabel1">Portfolio</h4>
+                    <h4 class="modal-title modal-h4" id="myPortfolioModalLabel1">Portfolio</h4>
                 </div>
                 <div class="modal-body">
                     <div class="row">
@@ -336,7 +336,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <p>Responsive, mobile-first Portfolio web applications.</p>
+                            <p class="modal-p">Responsive, mobile-first Portfolio web applications.</p>
                         </div>
                     </div>
                 </div>
@@ -351,7 +351,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myPortfolioModalLabel2">Vigilante</h4>
+                    <h4 class="modal-title modal-h4" id="myPortfolioModalLabel2">Vigilante</h4>
                 </div>
                 <div class="modal-body">
                     <div class="row">
@@ -365,7 +365,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <p>Responsive, mobile-first Vigilante web page.</p>
+                            <p class="modal-p">Responsive, mobile-first Vigilante web page.</p>
                         </div>
                     </div>
                 </div>
@@ -380,7 +380,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myPortfolioModalLabel3">Journey</h4>
+                    <h4 class="modal-title modal-h4" id="myPortfolioModalLabel3">Journey</h4>
                 </div>
                 <div class="modal-body">
                     <div class="row">
@@ -394,7 +394,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <p>Responsive, mobile-first Journey web page.</p>
+                            <p class="modal-p">Responsive, mobile-first Journey web page.</p>
                         </div>
                     </div>
                 </div>
@@ -409,7 +409,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myPortfolioModalLabel4">Photographer</h4>
+                    <h4 class="modal-title modal-h4" id="myPortfolioModalLabel4">Photographer</h4>
                 </div>
                 <div class="modal-body">
                     <div class="row">
@@ -423,7 +423,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <p>Responsive, mobile-first Photographer web page.</p>
+                            <p class="modal-p">Responsive, mobile-first Photographer web page.</p>
                         </div>
                     </div>
                 </div>
@@ -438,7 +438,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myPortfolioModalLabel5">Traveller</h4>
+                    <h4 class="modal-title modal-h4" id="myPortfolioModalLabel5">Traveller</h4>
                 </div>
                 <div class="modal-body">
                     <div class="row">
@@ -452,7 +452,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <p>Responsive, mobile-first Traveller web site.</p>
+                            <p class="modal-p">Responsive, mobile-first Traveller web site.</p>
                         </div>
                     </div>
                 </div>
@@ -467,7 +467,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myPortfolioModalLabel6">Learning</h4>
+                    <h4 class="modal-title modal-h4" id="myPortfolioModalLabel6">Learning</h4>
                 </div>
                 <div class="modal-body">
                     <div class="row">
@@ -481,7 +481,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <p>Responsive, mobile-first Learning web site.</p>
+                            <p class="modal-p">Responsive, mobile-first Learning web site.</p>
                         </div>
                     </div>
                 </div>
